--- a/less/index.less
+++ b/less/index.less
@@ -5,3 +5,16 @@
 @import 'base.less';
 @import 'layout.less';
 @import 'components/_components.less';
+
+.flex-wrapper {
+  display: flex;
+  width: 100%;
+
+  div {
+    width: 80%;
+  }
+
+  aside {
+    width: 20%;
+  }
+}
