--- a/less/variables.less
+++ b/less/variables.less
@@ -6,8 +6,12 @@
 @gray: rgba(193, 193, 193, 1);
 @gray-trans: rgba(193, 193, 193, 0.5);
 @navy: rgba(44, 66, 81, 1);
+@navy-trans: rgba(44, 66, 81, 0.5);
 @red: rgba(209, 102, 102, 1);
 @red-trans: rgba(209, 102, 102, 0.5);
-@green: rgba(182, 198, 73, 1);
+@green: rgba(110, 191, 98, 1);
+@green-trans: rgba(110, 191, 98, 0.5);
 @white: rgba(255, 255, 255, 1);
 @white-trans: rgba(255, 255, 255, 0.8);
+@brown: #643D38;
+@light: #FBE8CD;
