--- a/css/index.css
+++ b/css/index.css
@@ -155,6 +155,7 @@ body {
   background-image: url('../img/bg.jpg');
   background-size: cover;
   background-attachment: fixed;
+  color: #2c4251;
 }
 h1,
 h2,
@@ -190,33 +191,36 @@ body {
   display: flex;
   width: 80vw;
   max-width: 1600px;
-  background-color: #ffffff;
   height: 80vh;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  box-shadow: 0 5px 20px 5px #000;
 }
-.col {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
+.section {
+  padding-bottom: 4rem;
+  margin-bottom: 4rem;
+  border-bottom: solid 1px rgba(44, 66, 81, 0.5);
 }
 #left {
   flex-shrink: 0;
+  background-color: #643D38;
+  padding: 5rem;
+}
+#right {
+  background-color: #ffffff;
+  padding: 5rem;
+  position: relative;
+}
+#right .copyright {
+  color: rgba(44, 66, 81, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5rem 0;
 }
 .sticky {
   position: sticky;
   top: 0;
-}
-.navbar {
-  padding: 0 5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 100%;
-}
-.navbar .nav-item {
-  padding: 2rem 0;
 }
 .flex-wrapper {
   display: flex;
@@ -227,4 +231,58 @@ body {
 }
 .flex-wrapper aside {
   width: 20%;
+}
+.navbar {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  width: 100%;
+  color: #FBE8CD;
+}
+.navbar h3 {
+  border-bottom: solid 1px #FBE8CD;
+  padding-bottom: 1rem;
+}
+.navbar .nav-item {
+  text-decoration: none;
+  color: inherit;
+  font-size: 1.8rem;
+  font-weight: 600;
+  letter-spacing: 0.2rem;
+}
+.navbar .nav-item:not(:nth-child(1)) {
+  padding-top: 1.8rem;
+}
+.navbar .nav-item:hover {
+  color: #d16666;
+  text-decoration: underline;
+}
+.header {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.header .header-content {
+  text-align: center;
+}
+.header .header-content .heading {
+  font-size: 4rem;
+  border-bottom: solid 1px rgba(44, 66, 81, 0.5);
+  padding-bottom: 1rem;
+  margin-bottom: 0.5rem;
+}
+.header .header-content .sub {
+  font-size: 2.4rem;
+}
+.header img {
+  border-radius: 100%;
+  box-shadow: 0 6px 12px rgba(44, 66, 81, 0.5);
+}
+.experience {
+  display: flex;
+  width: 100%;
+}
+.experience .experience-content {
+  width: 80%;
 }
