--- a/less/base.less
+++ b/less/base.less
@@ -8,6 +8,7 @@ body {
   background-image: url('../img/bg.jpg');
   background-size: cover;
   background-attachment: fixed;
+  color: @navy;
 }
 
 h1,
