--- a/css/index.css
+++ b/css/index.css
@@ -202,9 +202,15 @@ body {
   border-bottom: solid 1px rgba(44, 66, 81, 0.5);
 }
 #left {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
   flex-shrink: 0;
   background-color: #643D38;
   padding: 5rem;
+  color: #FBE8CD;
+  letter-spacing: 0.15rem;
 }
 #right {
   background-color: #ffffff;
@@ -285,4 +291,53 @@ body {
 }
 .experience .experience-content {
   width: 80%;
+}
+.contact {
+  margin-top: 2rem;
+  color: #FBE8CD;
+  letter-spacing: 0.15rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.contact h4 {
+  margin-bottom: 2rem;
+}
+.contact-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.contact-item:not(:last-child) {
+  margin-bottom: 2rem;
+}
+.contact-item .fa {
+  display: block;
+  padding-bottom: 1rem;
+}
+.contact-item .contact-link {
+  color: inherit;
+  text-decoration: inherit;
+  text-align: center;
+}
+.contact-item .contact-link:hover {
+  color: #d16666;
+}
+.social {
+  text-align: center;
+}
+.social h4 {
+  margin-bottom: 2rem;
+}
+.social .social-icons .social-link {
+  text-decoration: none;
+  color: inherit;
+}
+.social .social-icons .social-link:hover {
+  color: #d16666;
+}
+.social .social-icons .social-link:not(:last-child) {
+  padding-right: 2rem;
 }
