--- a/less/index.less
+++ b/less/index.less
@@ -5,3 +5,21 @@
 @import 'base.less';
 @import 'layout.less';
 @import 'components/_components.less';
+
+.social {
+  text-align: center;
+
+  h4 {
+    margin-bottom: 2rem;
+  }
+
+  .social-icons {
+    .social-link {
+      .link(inherit, @red);
+
+      &:not(:last-child) {
+        padding-right: 2rem;
+      }
+    }
+  }
+}
