--- a/less/layout.less
+++ b/less/layout.less
@@ -20,9 +20,15 @@ body {
 }
 
 #left {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
   flex-shrink: 0;
   background-color: @brown;
   padding: 5rem;
+  color: @light;
+  letter-spacing: .15rem;
 }
 
 #right {
