--- a/less/mixins.less
+++ b/less/mixins.less
@@ -16,3 +16,14 @@
   justify-content: @justify;
   align-items: @align;
 }
+
+.link(@color: inherit;
+
+@hcolor: inherit) {
+  text-decoration: none;
+  color: @color;
+
+  &:hover {
+    color: @hcolor;
+  }
+}
