--- a/css/index.css
+++ b/css/index.css
@@ -190,10 +190,9 @@ body {
 .container {
   display: flex;
   width: 80vw;
-  max-width: 1600px;
   height: 80vh;
-  overflow-x: hidden;
-  overflow-y: scroll;
+  position: relative;
+  max-width: 1600px;
   box-shadow: 0 5px 20px 5px #000;
 }
 .section {
@@ -215,7 +214,7 @@ body {
 #right {
   background-color: #ffffff;
   padding: 5rem;
-  position: relative;
+  overflow: auto;
 }
 #right .copyright {
   color: rgba(44, 66, 81, 0.5);
@@ -340,4 +339,17 @@ body {
 }
 .social .social-icons .social-link:not(:last-child) {
   padding-right: 2rem;
+}
+.experience .experience-content {
+  padding-right: 2rem;
+}
+.experience .experience-sidebar h3 {
+  margin-bottom: 2rem;
+}
+.experience .experience-sidebar ul li {
+  list-style: square;
+  margin-left: 2rem;
+}
+.history-item {
+  padding-top: 2rem;
 }
