--- a/less/index.less
+++ b/less/index.less
@@ -23,3 +23,30 @@
     }
   }
 }
+
+.experience {
+
+  .experience-content {
+    padding-right: 2rem;
+  }
+
+  .experience-sidebar {
+
+    h3 {
+      margin-bottom: 2rem;
+    }
+
+    ul {
+      li {
+        list-style: square;
+        margin-left: 2rem;
+      }
+    }
+  }
+}
+
+.history {
+  &-item {
+    padding-top: 2rem;
+  }
+}
