--- a/css/index.css
+++ b/css/index.css
@@ -284,11 +284,11 @@ body {
   border-radius: 100%;
   box-shadow: 0 6px 12px rgba(44, 66, 81, 0.5);
 }
-.experience {
+.about {
   display: flex;
   width: 100%;
 }
-.experience .experience-content {
+.about .about-content {
   width: 80%;
 }
 .contact {
@@ -340,13 +340,13 @@ body {
 .social .social-icons .social-link:not(:last-child) {
   padding-right: 2rem;
 }
-.experience .experience-content {
+.about .about-content {
   padding-right: 2rem;
 }
-.experience .experience-sidebar h3 {
+.about .about-sidebar h3 {
   margin-bottom: 2rem;
 }
-.experience .experience-sidebar ul li {
+.about .about-sidebar ul li {
   list-style: square;
   margin-left: 2rem;
 }
