--- a/less/index.less
+++ b/less/index.less
@@ -24,13 +24,13 @@
   }
 }
 
-.experience {
+.about {
 
-  .experience-content {
+  .about-content {
     padding-right: 2rem;
   }
 
-  .experience-sidebar {
+  .about-sidebar {
 
     h3 {
       margin-bottom: 2rem;
