--- a/css/index.css
+++ b/css/index.css
@@ -347,8 +347,12 @@ body {
   margin-bottom: 2rem;
 }
 .about .about-sidebar ul li {
+  font-size: 2rem;
   list-style: square;
   margin-left: 2rem;
+}
+.about .about-sidebar ul li:not(:first-child) {
+  padding-top: 2rem;
 }
 .history-item {
   padding-top: 2rem;
