Added some more styling to the work history section, organized less

--- a/css/index.css
+++ b/css/index.css
@@ -164,6 +164,7 @@ h4,
 h5,
 h6 {
   font-family: 'Roboto', sans-serif;
+  margin-bottom: 2rem;
 }
 h1 {
   font-size: 4rem;
@@ -290,6 +291,15 @@ body {
 }
 .about .about-content {
   width: 80%;
+  padding-right: 2rem;
+}
+.about .about-sidebar ul li {
+  font-size: 2rem;
+  list-style: square;
+  margin-left: 2rem;
+}
+.about .about-sidebar ul li:not(:first-child) {
+  padding-top: 2rem;
 }
 .contact {
   margin-top: 2rem;
@@ -299,9 +309,6 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-}
-.contact h4 {
-  margin-bottom: 2rem;
 }
 .contact-item {
   display: flex;
@@ -324,6 +331,10 @@ body {
 .contact-item .contact-link:hover {
   color: #d16666;
 }
+.history-item {
+  padding: 2rem 0;
+  border-bottom: solid 1px rgba(44, 66, 81, 0.5);
+}
 .social {
   text-align: center;
 }
@@ -339,21 +350,4 @@ body {
 }
 .social .social-icons .social-link:not(:last-child) {
   padding-right: 2rem;
-}
-.about .about-content {
-  padding-right: 2rem;
-}
-.about .about-sidebar h3 {
-  margin-bottom: 2rem;
-}
-.about .about-sidebar ul li {
-  font-size: 2rem;
-  list-style: square;
-  margin-left: 2rem;
-}
-.about .about-sidebar ul li:not(:first-child) {
-  padding-top: 2rem;
-}
-.history-item {
-  padding-top: 2rem;
 }
