--- a/less/components/about.less
+++ b/less/components/about.less
@@ -4,7 +4,21 @@
 
   .about-content {
     width: 80%;
+    padding-right: 2rem;
   }
 
-  .about-sidebar {}
+  .about-sidebar {
+
+    ul {
+      li {
+        font-size: 2rem;
+        list-style: square;
+        margin-left: 2rem;
+
+        &:not(:first-child) {
+          padding-top: 2rem;
+        }
+      }
+    }
+  }
 }
