Cleaned up and renamed classes in less and html, changed navigation links and centered them, added objective content to the about section, changed resume button to portfolio button, added link to portfolio in nav

--- a/less/base.less
+++ b/less/base.less
@@ -18,7 +18,7 @@ h4,
 h5,
 h6 {
   font-family: @secondary-font;
-  margin-bottom: 2rem;
+  margin: 2rem 0;
 }
 
 h1 {
@@ -40,4 +40,8 @@ h4 {
 p {
   line-height: 1.6;
   letter-spacing: .08rem;
+}
+
+strong {
+  font-weight: 600;
 }
