--- a/less/components/navbar.less
+++ b/less/components/navbar.less
@@ -1,5 +1,5 @@
 .navbar {
-  .flex-align(center, flex-start);
+  .flex-align(center, center);
   flex-direction: column;
   width: 100%;
   color: @light;
@@ -13,7 +13,6 @@
     text-decoration: none;
     color: inherit;
     font-size: 1.8rem;
-    font-weight: 600;
     letter-spacing: 0.2rem;
 
     &:not(:nth-child(1)) {
