--- a/css/index.css
+++ b/css/index.css
@@ -164,7 +164,7 @@ h4,
 h5,
 h6 {
   font-family: 'Roboto', sans-serif;
-  margin-bottom: 2rem;
+  margin: 2rem 0;
 }
 h1 {
   font-size: 4rem;
@@ -181,6 +181,9 @@ h4 {
 p {
   line-height: 1.6;
   letter-spacing: 0.08rem;
+}
+strong {
+  font-weight: 600;
 }
 body {
   display: flex;
@@ -201,7 +204,7 @@ body {
   margin-bottom: 4rem;
   border-bottom: solid 1px rgba(44, 66, 81, 0.5);
 }
-#left {
+.left {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -212,12 +215,12 @@ body {
   color: #FBE8CD;
   letter-spacing: 0.15rem;
 }
-#right {
+.right {
   background-color: #ffffff;
   padding: 5rem;
   overflow: auto;
 }
-#right .copyright {
+.right .copyright {
   color: rgba(44, 66, 81, 0.5);
   display: flex;
   justify-content: center;
@@ -241,7 +244,7 @@ body {
 .navbar {
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
   width: 100%;
   color: #FBE8CD;
@@ -254,7 +257,6 @@ body {
   text-decoration: none;
   color: inherit;
   font-size: 1.8rem;
-  font-weight: 600;
   letter-spacing: 0.2rem;
 }
 .navbar .nav-item:not(:nth-child(1)) {
@@ -280,6 +282,14 @@ body {
 }
 .header .header-content .sub {
   font-size: 2.4rem;
+}
+.header .header-content .btn {
+  background: #ffffff;
+  margin-top: 2rem;
+  border: solid 1px #643D38;
+  padding: 1rem 2rem;
+  font-size: 1.6rem;
+  cursor: pointer;
 }
 .header img {
   border-radius: 100%;
