--- a/less/components/header.less
+++ b/less/components/header.less
@@ -14,6 +14,15 @@
     .sub {
       font-size: 2.4rem;
     }
+
+    .btn {
+      background: @white;
+      margin-top: 2rem;
+      border: solid 1px @brown;
+      padding: 1rem 2rem;
+      font-size: 1.6rem;
+      cursor: pointer;
+    }
   }
 
   img {
