--- a/less/layout.less
+++ b/less/layout.less
@@ -18,7 +18,7 @@ body {
   border-bottom: solid 1px @navy-trans;
 }
 
-#left {
+.left {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -30,7 +30,7 @@ body {
   letter-spacing: .15rem;
 }
 
-#right {
+.right {
   background-color: @white;
   padding: 5rem;
   overflow: auto;
