--- a/less/components/contact.less
+++ b/less/components/contact.less
@@ -5,6 +5,10 @@
   .flex-align(center, center);
   flex-direction: column;
 
+  @media only screen and (max-width: 800px) {
+    display: none;
+  }
+
   &-item {
     .flex-align(center, center);
     flex-direction: column;
