Further adjusted responsive media queries

--- a/css/index.css
+++ b/css/index.css
@@ -189,12 +189,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
-}
-@media only screen and (max-width: 500px) {
-  body {
-    overflow: auto;
-  }
 }
 .container {
   display: flex;
@@ -206,9 +200,8 @@ body {
 }
 @media only screen and (max-width: 800px) {
   .container {
-    width: 100vw;
-    height: 100vh;
-    flex-direction: column;
+    width: 100%;
+    height: 100%;
   }
 }
 .section {
@@ -231,14 +224,21 @@ body {
 }
 @media only screen and (max-width: 800px) {
   .left {
-    flex-shrink: 1;
+    display: block;
+    position: relative;
     height: auto;
+    width: 10rem;
   }
 }
 .right {
   background-color: #ffffff;
   padding: 5rem;
   overflow: auto;
+}
+@media only screen and (max-width: 800px) {
+  .right {
+    padding: 2rem;
+  }
 }
 .right .copyright {
   color: rgba(44, 66, 81, 0.5);
@@ -247,15 +247,10 @@ body {
   align-items: center;
   margin: 5rem 0;
 }
-.flex-wrapper {
-  display: flex;
-  width: 100%;
-}
-.flex-wrapper div {
-  width: 80%;
-}
-.flex-wrapper aside {
-  width: 20%;
+@media only screen and (max-width: 800px) {
+  .right .copyright {
+    margin-top: 2rem;
+  }
 }
 .navbar {
   display: flex;
@@ -268,6 +263,11 @@ body {
 .navbar h3 {
   border-bottom: solid 1px #FBE8CD;
   padding-bottom: 1rem;
+}
+@media only screen and (max-width: 800px) {
+  .navbar h3 {
+    display: none;
+  }
 }
 .navbar .nav-item {
   text-decoration: none;
@@ -282,10 +282,16 @@ body {
   color: #d16666;
   text-decoration: underline;
 }
+@media only screen and (max-width: 800px) {
+  .navbar .nav-item {
+    font-size: 1.6rem;
+  }
+}
 .header {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  width: 100%;
 }
 @media only screen and (max-width: 1442px) {
   .header {
@@ -321,10 +327,21 @@ body {
   border-radius: 100%;
   box-shadow: 0 6px 12px rgba(44, 66, 81, 0.5);
 }
+@media only screen and (max-width: 500px) {
+  .header img {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .header img {
+    width: 80%;
+  }
+}
 @media only screen and (max-width: 1442px) {
   .header img {
     margin-top: 2rem;
     order: 1;
+    width: 60%;
   }
 }
 .about {
@@ -386,7 +403,7 @@ body {
   flex-direction: column;
 }
 @media only screen and (max-width: 800px) {
-  .contact {
+  .contact h4 {
     display: none;
   }
 }
@@ -399,9 +416,20 @@ body {
 .contact-item:not(:last-child) {
   margin-bottom: 2rem;
 }
+@media only screen and (max-width: 800px) {
+  .contact-item:not(:last-child) {
+    margin: 0;
+  }
+}
 .contact-item .fa {
   display: block;
   padding-bottom: 1rem;
+}
+@media only screen and (max-width: 800px) {
+  .contact-item .fa {
+    padding-top: 2rem;
+    padding-bottom: 0;
+  }
 }
 .contact-item .contact-link {
   color: inherit;
@@ -410,6 +438,11 @@ body {
 }
 .contact-item .contact-link:hover {
   color: #d16666;
+}
+@media only screen and (max-width: 800px) {
+  .contact-item .contact-link span {
+    display: none;
+  }
 }
 .history-item {
   padding: 2rem 0;
@@ -420,19 +453,47 @@ body {
 }
 @media only screen and (max-width: 800px) {
   .social {
-    display: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 .social h4 {
   margin-bottom: 2rem;
 }
+@media only screen and (max-width: 800px) {
+  .social h4 {
+    display: none;
+  }
+}
 .social .social-icons .social-link {
   text-decoration: none;
   color: inherit;
+  cursor: pointer;
 }
 .social .social-icons .social-link:hover {
   color: #d16666;
 }
 .social .social-icons .social-link:not(:last-child) {
   padding-right: 2rem;
+}
+@media only screen and (max-width: 800px) {
+  .social .social-icons .social-link:not(:last-child) {
+    padding: 0;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .social .social-icons .social-link .fab {
+    padding-top: 2rem;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .social .social-icons {
+    padding-top: 2rem;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .social .social-icons {
+    padding: 0;
+  }
 }
