--- a/less/components/social-icons.less
+++ b/less/components/social-icons.less
@@ -2,21 +2,44 @@
   text-align: center;
 
   @media only screen and (max-width: 800px) {
-    display: none;
+    .flex-align(center, center);
   }
 
   h4 {
     margin-bottom: 2rem;
+
+    @media only screen and (max-width: 800px) {
+      display: none;
+    }
   }
 
   .social-icons {
 
     .social-link {
       .link(inherit, @red);
+      cursor: pointer;
 
       &:not(:last-child) {
         padding-right: 2rem;
+
+        @media only screen and (max-width: 800px) {
+          padding: 0;
+        }
       }
+
+      .fab {
+        @media only screen and (max-width: 800px) {
+          padding-top: 2rem;
+        }
+      }
+    }
+
+    @media only screen and (max-width: 800px) {
+      padding-top: 2rem;
+    }
+
+    @media only screen and (max-width: 800px) {
+      padding: 0;
     }
   }
 }
