--- a/less/layout.less
+++ b/less/layout.less
@@ -1,10 +1,5 @@
 body {
   .flex-align(center, center);
-  overflow: hidden;
-
-  @media only screen and (max-width: 500px) {
-    overflow: auto;
-  }
 }
 
 .container {
@@ -16,9 +11,8 @@ body {
   box-shadow: 0 5px 20px 5px #000;
 
   @media only screen and (max-width: 800px) {
-    width: 100vw;
-    height: 100vh;
-    flex-direction: column;
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -42,8 +36,10 @@ body {
   top: 0;
 
   @media only screen and (max-width: 800px) {
-    flex-shrink: 1;
+    display: block;
+    position: relative;
     height: auto;
+    width: 10rem;
   }
 }
 
@@ -52,22 +48,17 @@ body {
   padding: 5rem;
   overflow: auto;
 
+  @media only screen and (max-width: 800px) {
+    padding: 2rem;
+  }
+
   .copyright {
     color: @navy-trans;
     .flex-align(center, center);
     margin: 5rem 0;
-  }
-}
 
-.flex-wrapper {
-  display: flex;
-  width: 100%;
-
-  div {
-    width: 80%;
-  }
-
-  aside {
-    width: 20%;
+    @media only screen and (max-width: 800px) {
+      margin-top: 2rem;
+    }
   }
 }
