renamed the less folder structure

--- a/less/index.less
+++ b/less/index.less
@@ -4,4 +4,4 @@
 @import 'mixins.less';
 @import 'base.less';
 @import 'layout.less';
-@import 'components/_components.less';
+@import 'sections/.less';
