--- a/less/index.less
+++ b/less/index.less
@@ -4,4 +4,4 @@
 @import 'mixins.less';
 @import 'base.less';
 @import 'layout.less';
-@import 'sections/.less';
+@import 'sections/_section-styles.less';
